k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: backend
          image: url-shortener:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /live
              port: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
