k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: url-shortener:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /live
              port: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: url-shortener-pvc
