k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener-frontend
  template:
    metadata:
      labels:
        app: url-shortener-frontend
    spec:
      containers:
        - name: frontend
          image: url-shortener-frontend:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
