k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-backend
spec:
  type: NodePort
  selector:
    app: url-shortener
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30080
