k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-frontend
spec:
  type: ClusterIP
  selector:
    app: url-shortener-frontend
  ports:
    - port: 80
      targetPort: 3000
