k8s/base/sqlite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-sqlite
spec:
  type: ClusterIP
  selector:
    app: url-shortener-sqlite
  ports:
    - port: 80
      targetPort: 8081
